--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -2,3 +2,19 @@
   background-color: #282c34;
   min-height: 100vh;
 }
+
+.top-down-animation {
+  animation: upDown 1s linear;
+}
+
+@keyframes upDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
